@@ -1,13 +1,9 @@
-package com.dbp.winproyect.ServiceTests;
+/*package com.dbp.winproyect.ServiceTests;
 
-import static com.dbp.winproyect.tag.domain.ServiceTag.LIMPIEZA;
-import static org.mockito.Mockito.*;
-import static org.junit.jupiter.api.Assertions.*;
-
-import com.dbp.winproyect.enterprise.domain.Enterprise;
 import com.dbp.winproyect.enterprise.infrastructure.EnterpriseRepository;
+import com.dbp.winproyect.freelancer.domain.Freelancer;
 import com.dbp.winproyect.freelancer.infrastructure.FreelancerRepository;
-import com.dbp.winproyect.provider.infrastructure.ProviderRepository;
+import com.dbp.winproyect.provider.domain.ProviderService;
 import com.dbp.winproyect.review.domain.ReviewService;
 import com.dbp.winproyect.serviceEntity.domain.ServiceEntity;
 import com.dbp.winproyect.serviceEntity.domain.ServiceEntityService;
@@ -16,21 +12,34 @@ import com.dbp.winproyect.serviceEntity.dto.ServiceDtoResponse;
 import com.dbp.winproyect.serviceEntity.infrastructure.ServiceEntityRepository;
 import com.dbp.winproyect.tag.domain.ServiceTag;
 import com.dbp.winproyect.tag.domain.TagService;
+import org.junit.Before;
+import org.junit.jupiter.api.Assertions;
+import org.junit.runner.RunWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Mockito;
+import org.mockito.MockitoAnnotations;
+import org.mockito.junit.MockitoJUnitRunner;
+import org.modelmapper.ModelMapper;
+
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.security.core.context.SecurityContextHolder;
-
-import java.util.Arrays;
-import java.util.List;
 import java.util.Optional;
+
+
+import static com.dbp.winproyect.tag.domain.ServiceTag.ENTREGA;
 
 @ExtendWith(MockitoExtension.class)
 public class ServiceEntityServiceTests {
-
     @InjectMocks
     private ServiceEntityService serviceEntityService;
 
@@ -38,13 +47,7 @@ public class ServiceEntityServiceTests {
     private ServiceEntityRepository serviceEntityRepository;
 
     @Mock
-    private ProviderRepository providerRepository;
-
-    @Mock
-    private FreelancerRepository freelancerRepository;
-
-    @Mock
-    private EnterpriseRepository enterpriseRepository;
+    private ProviderService providerService;
 
     @Mock
     private TagService tagService;
@@ -53,54 +56,115 @@ public class ServiceEntityServiceTests {
     private ReviewService reviewService;
 
     @Mock
-    private Authentication authentication;
+    private FreelancerRepository freelancerRepository;
 
-    @BeforeEach
-    void setUp() {
-        // Crear y establecer el contexto de seguridad
-        SecurityContext securityContext = mock(SecurityContext.class);
-        when(securityContext.getAuthentication()).thenReturn(authentication);
-        SecurityContextHolder.setContext(securityContext);
+    @Mock
+    private EnterpriseRepository enterpriseRepository;
 
-        // Configurar el comportamiento del objeto de autenticación simulado
-        when(authentication.getName()).thenReturn("test@example.com"); // Cambia este valor según tu caso de uso
+    @Mock
+    private ModelMapper modelMapper;
+
+    // Inicialización antes de cada test
+    @Before
+    public void setUp() {
+        MockitoAnnotations.initMocks(this);
     }
 
+    // Test para obtener servicios por tag
     @Test
-    void testCreateService() {
-        // Crear un DTO de solicitud
-        ServiceDtoRequest serviceDtoRequest = new ServiceDtoRequest();
-        serviceDtoRequest.setName("Test Service");
-        serviceDtoRequest.setDescription("Test Description");
-        serviceDtoRequest.setAddress("123 Test St");
-        serviceDtoRequest.setSuggestedPrice(100.0);
+    public void testObtenerServiciosPorTag() {
+        // Crear un tag de prueba
+        ServiceTag tag = ENTREGA;
 
-        // Simular la respuesta del repositorio de proveedores
-        when(providerRepository.findByEmail(anyString())).thenReturn(Optional.empty());
-        // Simular la respuesta del repositorio de empresas
-        when(enterpriseRepository.findByEmail(anyString())).thenReturn(Optional.of(new Enterprise()));
-
-        // Llamar al método a probar
-        ServiceEntity savedService = serviceEntityService.createService(serviceDtoRequest);
-
-        // Verificar que el servicio fue guardado
-        verify(serviceEntityRepository, times(1)).save(any(ServiceEntity.class));
-        assertEquals("Test Service", savedService.getName());
-    }
-
-    @Test
-    void testObtenerServiciosPorTag() {
-        // Simular la respuesta del repositorio de servicios
-        ServiceTag tag = LIMPIEZA; // Asume que tienes un objeto ServiceTag
+        // Crear un servicio de prueba
         ServiceEntity service1 = new ServiceEntity();
-        ServiceEntity service2 = new ServiceEntity();
+        service1.setName("Servicio 1");
+        //service1.setTags(Set.of(tag)); // Asegúrate de que el tag está asociado al servicio
 
-        when(serviceEntityRepository.findAllByTags_Name(tag)).thenReturn(Arrays.asList(service1, service2));
+        // Configurar el mock para devolver el servicio cuando se busca por el tag
+        List<ServiceEntity> services = List.of(service1);
+        Mockito.when(serviceEntityRepository.findAllByTags_Name(ENTREGA)).thenReturn(services);
 
-        // Llamar al método a probar
-        List<ServiceDtoResponse> services = serviceEntityService.obtenerServiciosPorTag(tag);
+        // Configurar el mapeo del DTO
+        ServiceDtoResponse dtoResponse = new ServiceDtoResponse();
+        dtoResponse.setName("Servicio 1");
+        Mockito.when(modelMapper.map(Mockito.any(ServiceEntity.class), Mockito.eq(ServiceDtoResponse.class)))
+                .thenReturn(dtoResponse);
 
-        // Verificar que se devolvieron los servicios esperados
-        assertEquals(2, services.size());
-        verify(serviceEntityRepository, times(1)).findAllByTags_Name(tag);
+        // Ejecutar el método
+        List<ServiceDtoResponse> result = serviceEntityService.obtenerServiciosPorTag(tag);
+
+        // Verificar resultados
+        Assertions.assertEquals(1, result.size());
+        Assertions.assertEquals("Servicio 1", result.get(0).getName());
+        Mockito.verify(serviceEntityRepository).findAllByTags_Name(ENTREGA);
     }
+
+
+    // Test para crear un servicio
+    @Test
+    public void testCreateService() {
+        // Mock de datos
+        ServiceDtoRequest dtoRequest = new ServiceDtoRequest();
+        dtoRequest.setName("Nuevo Servicio");
+        dtoRequest.setDescription("Descripción de servicio");
+        dtoRequest.setAddress("Calle 123");
+        dtoRequest.setSuggestedPrice(100.0);
+
+        Freelancer freelancer = new Freelancer();
+        Mockito.when(freelancerRepository.findByEmail(Mockito.anyString())).thenReturn(Optional.of(freelancer));
+
+        ServiceEntity savedEntity = new ServiceEntity();
+        savedEntity.setName("Nuevo Servicio");
+        Mockito.when(serviceEntityRepository.save(Mockito.any(ServiceEntity.class))).thenReturn(savedEntity);
+
+        // Ejecutar el método
+        ServiceEntity result = serviceEntityService.createService(dtoRequest);
+
+        // Verificar resultados
+        Assertions.assertEquals("Nuevo Servicio", result.getName());
+        Mockito.verify(serviceEntityRepository).save(Mockito.any(ServiceEntity.class));
+    }
+
+    // Test para obtener un servicio por ID
+    @Test
+    public void testObtenerServicio() {
+        Long id = 1L;
+        ServiceEntity serviceEntity = new ServiceEntity();
+        serviceEntity.setName("Servicio Test ");
+
+        when(serviceEntityRepository.findById(id)).thenReturn(Optional.of(serviceEntity));
+
+        ServiceDtoResponse response = new ServiceDtoResponse();
+        response.setName("Servicio Test");
+        when(modelMapper.map(any(ServiceEntity.class), eq(ServiceDtoResponse.class)))
+                .thenReturn(response);
+
+        // Ejecutar el método
+        ServiceDtoResponse result = serviceEntityService.obtenerServicio(id, 0, 10, "name");
+
+        // Verificar resultados
+        assertEquals("Servicio Test", result.getName());
+        verify(serviceEntityRepository).findById(id);
+    }
+
+    // Test para eliminar un servicio
+    @org.junit.Test
+    @Test
+    public void testDeleteService() {
+        Long id = 1L;
+        ServiceEntity serviceEntity = new ServiceEntity();
+
+        Mockito.when(serviceEntityRepository.findById(id)).thenReturn(Optional.of(serviceEntity));
+
+        // Ejecutar el método
+        serviceEntityService.deleteService(id);
+
+        // Verificar que el servicio fue eliminado
+        Mockito.verify(serviceEntityRepository).delete(serviceEntity);
+        System.out.println("El servicio con ID " + id + " fue eliminado.");
+    }
+
+}
+*/
+
